--- a/app/css/ticket.css
+++ b/app/css/ticket.css
@@ -6,13 +6,35 @@ body {
   color: #990100;
   text-align: center; }
 
+#loadingText {
+  font-family: Arial,Helvetica,Verdana,sans-serif;
+  font-size: 1.5em;
+  font-weight: 700;
+  position: relative;
+  top: 55%;
+  color: white;
+  text-align: center; }
+
+#progressBarContainer {
+  position: relative;
+  top: 57%;
+  left: 19%;
+  width: 25em;
+  height: 1em;
+  border: solid 2px white; }
+
+#progressBarFill {
+  height: 100%;
+  background-color: #990100; }
+
 #loadPanel {
   margin: 1em 0px;
   width: 40em;
   height: 40em;
   margin-left: auto;
   margin-right: auto;
-  background: url("../img/Tipp24_logo.png") no-repeat center center;
+  background: url("../img/Tipp24_logo.png") no-repeat;
+  background-position: 50% 40%;
   background-color: #ff9b00;
   text-align: center; }
 
@@ -223,3 +245,5 @@ body {
   font-weight: bold;
   font-size: 3em;
   margin: 25px; }
+
+/*# sourceMappingURL=ticket.css.map */
