--- a/app/css/ticket.scss
+++ b/app/css/ticket.scss
@@ -23,6 +23,31 @@ body {
   text-align: center;
 }
 
+#loadingText {
+  font-family: Arial,Helvetica,Verdana,sans-serif;
+  font-size: 1.5 * $main-size;
+  font-weight: 700;
+  position: relative;
+  top: 55%;
+  color: white;
+  text-align: center;
+}
+
+#progressBarContainer {
+  position: relative;
+  top: 57%;
+  left: 19%;
+  width: 25 * $main-size;
+  height: $main-size;border: solid 2px white;
+
+}
+
+#progressBarFill {
+  height: 100%;
+//  width: 10%;
+  background-color: $red;
+}
+
 #loadPanel {
   margin: $main-size 0px;
   width: 40 * $main-size;
@@ -30,7 +55,8 @@ body {
   height: 40 * $main-size;
   margin-left: auto;
   margin-right: auto;
-  background: url("../img/Tipp24_logo.png") no-repeat center center;
+  background: url("../img/Tipp24_logo.png") no-repeat;
+  background-position: 50% 40%;
   background-color: $board-cell-color;
   text-align: center;
 }
